--- a/ConvertToAudio/TimeInput.xaml
+++ b/ConvertToAudio/TimeInput.xaml
@@ -7,12 +7,12 @@
     <Grid>
         <StackPanel Orientation="Horizontal">
             <TextBox x:Name="tb_Hours" Text="00" GotFocus="tb_GotFocus" ToolTip="Hours" LostFocus="tb_LostFocus" Width="19" KeyUp="tb_KeyUp"/>
-            <Label Content=":"/>
+            <Label Content=":" Margin="0,-5,0,0"/>
             <TextBox x:Name="tb_Minutes" Text="00" GotFocus="tb_GotFocus" ToolTip="Minutes" LostFocus="tb_LostFocus" Width="19" KeyUp="tb_KeyUp"/>
-            <Label Content=":"/>
+            <Label Content=":" Margin="0,-5,0,0"/>
             <TextBox x:Name="tb_Seconds" Text="00" GotFocus="tb_GotFocus" ToolTip="Seconds" LostFocus="tb_LostFocus" Width="19" KeyUp="tb_KeyUp"/>
-            <Label Content="."/>
-            <TextBox x:Name="tb_Milliseconds" Text="0000" GotFocus="tb_GotFocus" ToolTip="Milliseconds" LostFocus="tb_LostFocus" Width="32" KeyUp="tb_KeyUp"/>
+            <Label Content="." Margin="0,-5,0,0"/>
+            <TextBox x:Name="tb_Milliseconds" Text="000" GotFocus="tb_GotFocus" ToolTip="Milliseconds" LostFocus="tb_LostFocus" KeyUp="tb_KeyUp" Width="25"/>
         </StackPanel>
     </Grid>
 </UserControl>
