--- a/ConvertToAudio/MainWindow.xaml
+++ b/ConvertToAudio/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:custom="clr-namespace:ConvertToAudio"
-        Title="Convert to Audio" Height="390" Width="600" Icon="Resources\wywy.ico" ResizeMode="CanMinimize">
+        Title="Convert to Audio" Height="390" Width="600" ResizeMode="CanMinimize">
     <Grid>
         <StackPanel Margin="3">
             <StackPanel Orientation="Horizontal">
@@ -17,15 +17,12 @@
                         <custom:TimeInput x:Name="ti_startTime"/>
                     </StackPanel>
                 </GroupBox>
-
                 <GroupBox Header="Duration" Width="225" Margin="0,0,6,0">
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <CheckBox x:Name="cb_duration" Content="Enable" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,6,0" Checked="cb_duration_Checked" Unchecked="cb_duration_Unchecked"/>
                         <custom:TimeInput x:Name="ti_duration"/>
-                        
                     </StackPanel>
                 </GroupBox>
-                
                 <Button x:Name="btn_Convert" Content="Convert" Click="btn_Convert_Click" Margin="0,6,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Width="105"/>
             </StackPanel>
                 <TextBox x:Name="tb_Log" TextWrapping="Wrap" Height="270"/>
